Add - create pandana network

--- a/notebooks/metro_accessibility.ipynb
+++ b/notebooks/metro_accessibility.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3jKPAEtWHCfto+UXA0X9E",
+      "authorship_tag": "ABX9TyNXyfTajyV70DmCwWJPr7kj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -888,14 +888,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "GQKLrZgI6kEV",
-        "outputId": "b039166d-0e4c-404a-8fd8-bfda097b9aa6"
+        "outputId": "df570c13-cb42-49e3-d5be-01ae582c6932"
       },
       "outputs": [
         {
@@ -935,26 +935,19 @@
       ],
       "source": [
         "!pip install -q osmnx\n",
-        "!pip install -q pandana\n",
-        "!pip install -q pygaul\n",
-        "!pip install -q osmium\n",
-        "!pip install -q -U pyarrow\n",
-        "!pip install -q quackosm"
+        "!pip install -q pandana"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import pygaul\n",
         "import ee\n",
         "import geemap\n",
         "import geopandas as gpd\n",
         "import pandas as pd\n",
-        "import osmium\n",
         "import osmnx as ox\n",
         "import shapely\n",
-        "import bz2\n",
-        "import os\n",
+        "import pandana as pdna\n",
         "\n",
         "ee.Authenticate()\n",
         "ee.Initialize(project='kavyajeetbora-ee')"
@@ -965,9 +958,9 @@
           "height": 17
         },
         "id": "dCZFidgPBI_R",
-        "outputId": "9ee5c595-49de-470f-f48f-c74d220196a3"
+        "outputId": "216e6a02-f67b-430f-8a2e-769d9e95b3e7"
       },
-      "execution_count": 13,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1006,19 +999,29 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!wget https://download.geofabrik.de/asia/india/northern-zone-latest.osm.bz2 -O northern-zone-latest.osm.bz2"
+        "Downloading OSM extracts from openstreetmaps.fr\n",
+        "https://download.openstreetmap.fr/extracts/asia/india/"
       ],
       "metadata": {
-        "id": "3_0LwnffUOjN",
-        "outputId": "d85b4048-e029-426f-fbc0-8e63b4cfe873",
+        "id": "kY32FvJrjgHa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://download.openstreetmap.fr/extracts/asia/india/national_capital_territory_of_delhi-latest.osm.pbf -O NCR.osm.pbf"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 218
-        }
+        },
+        "id": "3_0LwnffUOjN",
+        "outputId": "553b486b-26b1-4798-f285-319bd137ab3c"
       },
-      "execution_count": 7,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1058,16 +1061,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-06-14 06:01:23--  https://download.geofabrik.de/asia/india/northern-zone-latest.osm.bz2\n",
-            "Resolving download.geofabrik.de (download.geofabrik.de)... 65.109.48.72, 65.109.50.43, 2a01:4f9:5a:25c3::2, ...\n",
-            "Connecting to download.geofabrik.de (download.geofabrik.de)|65.109.48.72|:443... connected.\n",
+            "--2024-06-14 07:02:05--  https://download.openstreetmap.fr/extracts/asia/india/national_capital_territory_of_delhi-latest.osm.pbf\n",
+            "Resolving download.openstreetmap.fr (download.openstreetmap.fr)... 213.36.253.212, 2a01:e0d:1:c:58bf:fac1:0:14\n",
+            "Connecting to download.openstreetmap.fr (download.openstreetmap.fr)|213.36.253.212|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 394812798 (377M) [application/x-bzip2]\n",
-            "Saving to: ‘northern-zone-latest.osm.bz2’\n",
+            "Length: 23206829 (22M) [application/vnd.openstreetmap.data+xml]\n",
+            "Saving to: ‘NCR.osm.pbf’\n",
             "\n",
-            "northern-zone-lates 100%[===================>] 376.52M  1.35MB/s    in 4m 23s  \n",
+            "NCR.osm.pbf         100%[===================>]  22.13M  17.2MB/s    in 1.3s    \n",
             "\n",
-            "2024-06-14 06:05:47 (1.43 MB/s) - ‘northern-zone-latest.osm.bz2’ saved [394812798/394812798]\n",
+            "2024-06-14 07:02:07 (17.2 MB/s) - ‘NCR.osm.pbf’ saved [23206829/23206829]\n",
             "\n"
           ]
         }
@@ -1095,9 +1098,9 @@
           "height": 17
         },
         "id": "Fdew1EpmAsFN",
-        "outputId": "4cb1da29-a5d8-4e15-fd93-961ffa505d9c"
+        "outputId": "38af9273-f1c0-4c55-e35c-9006a3419fbd"
       },
-      "execution_count": 14,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1322,7 +1325,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 89
+          "height": 98
         },
         "id": "ETK4TGwvkH-8",
         "outputId": "8bc37e37-435c-42c9-92a9-63c2c3001ee0"
@@ -1598,7 +1601,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 89
+          "height": 98
         },
         "id": "JZDldxquWs_O",
         "outputId": "1de4f67a-0850-4066-8e0d-81bd3ced36d1"
@@ -1864,14 +1867,75 @@
         "network = ox.graph.graph_from_polygon(bangalore_gdf.geometry.iloc[0], network_type='all', simplify=True, retain_all=False, truncate_by_edge=False, clean_periphery=None, custom_filter=None)"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
         "id": "e_vE6yGpY2p7",
-        "outputId": "d9fafc2b-382b-4356-a0e2-4df84ed282e5",
+        "outputId": "4b70da89-04b5-46a1-a397-2c3c9e160d6d"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "            <style>\n",
+              "                .geemap-dark {\n",
+              "                    --jp-widgets-color: white;\n",
+              "                    --jp-widgets-label-color: white;\n",
+              "                    --jp-ui-font-color1: white;\n",
+              "                    --jp-layout-color2: #454545;\n",
+              "                    background-color: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-dark .jupyter-button {\n",
+              "                    --jp-layout-color3: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab {\n",
+              "                    background-color: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab .jupyter-button {\n",
+              "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "            </style>\n",
+              "            "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 5min 5s, sys: 3.8 s, total: 5min 9s\n",
+            "Wall time: 5min 36s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "nodes, edges = ox.convert.graph_to_gdfs(network, nodes=True, edges=True) #node_geometry=True, fill_edge_geometry=True\n",
+        "edges = edges.reset_index()"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "Vm2kNAMcc3uE",
+        "outputId": "834adf40-11af-455d-b4c2-b236754d8a28"
       },
-      "execution_count": 31,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1912,13 +1976,191 @@
     {
       "cell_type": "code",
       "source": [
-        "network"
+        "edges.shape, nodes.shape"
       ],
       "metadata": {
-        "id": "Vm2kNAMcc3uE"
+        "id": "zhPgJGiOgMmO",
+        "outputId": "b72519e5-4d79-461d-df7a-0570387fd9f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "            <style>\n",
+              "                .geemap-dark {\n",
+              "                    --jp-widgets-color: white;\n",
+              "                    --jp-widgets-label-color: white;\n",
+              "                    --jp-ui-font-color1: white;\n",
+              "                    --jp-layout-color2: #454545;\n",
+              "                    background-color: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-dark .jupyter-button {\n",
+              "                    --jp-layout-color3: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab {\n",
+              "                    background-color: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab .jupyter-button {\n",
+              "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "            </style>\n",
+              "            "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((669271, 20), (248936, 6))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "network = pdna.Network(nodes[\"x\"], nodes[\"y\"], edges[\"u\"], edges[\"v\"],edges[[\"length\"]])"
+      ],
+      "metadata": {
+        "id": "KcD9g2ndksul",
+        "outputId": "da0dd579-52b9-44d6-cc88-7f297f271c59",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "            <style>\n",
+              "                .geemap-dark {\n",
+              "                    --jp-widgets-color: white;\n",
+              "                    --jp-widgets-label-color: white;\n",
+              "                    --jp-ui-font-color1: white;\n",
+              "                    --jp-layout-color2: #454545;\n",
+              "                    background-color: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-dark .jupyter-button {\n",
+              "                    --jp-layout-color3: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab {\n",
+              "                    background-color: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab .jupyter-button {\n",
+              "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "            </style>\n",
+              "            "
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Read KMZ files"
+      ],
+      "metadata": {
+        "id": "jO9twnLfmDn2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/data/delhi-metro-lines.kml -O delhi-metro-lines.kml"
+      ],
+      "metadata": {
+        "id": "GQF3LnaNlTMf",
+        "outputId": "2f405c4c-c7df-4ad9-892a-1cde18fe7151",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 218
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "            <style>\n",
+              "                .geemap-dark {\n",
+              "                    --jp-widgets-color: white;\n",
+              "                    --jp-widgets-label-color: white;\n",
+              "                    --jp-ui-font-color1: white;\n",
+              "                    --jp-layout-color2: #454545;\n",
+              "                    background-color: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-dark .jupyter-button {\n",
+              "                    --jp-layout-color3: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab {\n",
+              "                    background-color: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab .jupyter-button {\n",
+              "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "            </style>\n",
+              "            "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-06-14 07:15:36--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/data/delhi-metro-lines.kml\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 78498 (77K) [text/plain]\n",
+            "Saving to: ‘delhi-metro-lines.kml’\n",
+            "\n",
+            "\rdelhi-metro-lines.k   0%[                    ]       0  --.-KB/s               \rdelhi-metro-lines.k 100%[===================>]  76.66K  --.-KB/s    in 0.02s   \n",
+            "\n",
+            "2024-06-14 07:15:36 (3.53 MB/s) - ‘delhi-metro-lines.kml’ saved [78498/78498]\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
