Add - read exported network file

--- a/notebooks/download_osm_street_network.ipynb
+++ b/notebooks/download_osm_street_network.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfVi/cWL8b7bhcIAYSNnIV",
+      "authorship_tag": "ABX9TyPdhnltJEGUwUUs9J/w+f25",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,10 +40,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "GQKLrZgI6kEV",
-        "outputId": "6f39be01-ab0a-45d9-acf7-2bb4a1a8e88f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6f39be01-ab0a-45d9-acf7-2bb4a1a8e88f"
       },
       "outputs": [
         {
@@ -184,37 +184,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Choosing the gzip compression algorithm:**\n",
-        "\n",
-        "GZIP compression is lossless, meaning that when you decompress the compressed data, you get back an exact copy of the original. No information is lost during the compression process1. This makes GZIP ideal for reducing file sizes without compromising data integrity. It uses the Lempel-Ziv encoding (LZ77) algorithm for compression2. So, rest assured, your data remains intact!"
-      ],
-      "metadata": {
-        "id": "uR3aOo2-QmLY"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def partition_df(df, N_partitions=4):\n",
-        "    part_size = df.shape[0]//N_partitions\n",
-        "    dfs = []\n",
-        "    for i in range(N_partitions):\n",
-        "        n1 = part_size*i\n",
-        "        n2 = df.shape[0] if i==N_partitions-1 else part_size*(i+1)\n",
-        "        dfx = df.iloc[n1:n2, :]\n",
-        "        dfs.append(dfx)\n",
-        "\n",
-        "    return dfs"
-      ],
-      "metadata": {
-        "id": "TdmmIATmSSSZ"
-      },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## Export the networks"
       ],
       "metadata": {
@@ -258,13 +227,38 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Read the exported network data"
+      ],
       "metadata": {
-        "id": "9jyD5Lj_ba1z"
+        "id": "_VhybbdWeHKQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "network = pdna.Network.from_hdf5('ncr_network.h5')"
+      ],
+      "metadata": {
+        "id": "GKZFtahMeKCt",
+        "outputId": "34a0a182-e3b3-4e8a-b746-7fbe25f38fa3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 2min 2s, sys: 1.2 s, total: 2min 3s\n",
+            "Wall time: 1min 26s\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -393,6 +387,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Read the exported"
+      ],
+      "metadata": {
+        "id": "BDd4oZQtd9_e"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data = []\n",
@@ -488,6 +491,16 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Reference\n",
+        "1. Uploading large files in github: https://git-lfs.com/"
+      ],
+      "metadata": {
+        "id": "dYvs5nHLeCeI"
+      }
     },
     {
       "cell_type": "code",
