Add - extends for Mumbai, Blore, Hyd, Chennai, Kolkata

--- a/notebooks/download_osm_street_network.ipynb
+++ b/notebooks/download_osm_street_network.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdhnltJEGUwUUs9J/w+f25",
+      "authorship_tag": "ABX9TyPiykC0/7WY0925qad7dpjR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,16 +43,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6f39be01-ab0a-45d9-acf7-2bb4a1a8e88f"
+        "outputId": "ab91e9d5-180a-4c56-8b07-3c6e8ab461ad"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m107.2/107.2 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m16.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m10.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m107.2/107.2 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m11.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -88,6 +88,7 @@
         "## Downloading the osmnx network using bbox\n",
         "\n",
         "To draw the bounding box (bbox) you can use this [tool](https://bboxfinder.com/)\n",
+        "and this [Bounding Box Tool](https://boundingbox.klokantech.com/)\n",
         "\n",
         "- North = ymax\n",
         "- South = ymin\n",
@@ -112,24 +113,46 @@
     {
       "cell_type": "code",
       "source": [
+        "## Note: the coordinates are in West, South, East, North format\n",
+        "\n",
+        "bboxs = {\n",
+        "    'Mumbai': (72.7712628039,18.8895552464,73.0912396106,19.322318006),\n",
+        "    'Hyderabad': (78.2288393192,17.1952635128,78.692325037,17.6244114807),\n",
+        "    'Bangalore': (77.4480254838,12.815481916,77.7549560258,13.1026335949),\n",
+        "    'Chennai': (80.0337033915,12.8678089117,80.335827415,13.2370438819),\n",
+        "    'Kolkata': (88.2431406976,22.4883995072,88.4944529534,22.7071046611),\n",
+        "    'Ahmedabad': (72.4617185823,22.9179551449,72.699297928,23.1470216925)\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "obE19VMf723H"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "%%time\n",
-        "ox_network = ox.graph.graph_from_bbox(bbox=(28.889180, 28.361351, 77.587372, 76.819702), network_type='all', simplify=True, retain_all=False, truncate_by_edge=False, clean_periphery=None, custom_filter=None)"
+        "city = 'Bangalore'\n",
+        "W,S,E,N = bboxs[city]\n",
+        "ox_network = ox.graph.graph_from_bbox(bbox=(N,S,E,W), network_type='all', simplify=True, retain_all=False, truncate_by_edge=False, clean_periphery=None, custom_filter=None)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4drHRKAy97IU",
-        "outputId": "ad6348ba-dad6-4946-a757-e3a66d832140"
+        "outputId": "194ca445-3eda-44e8-e51a-e8cac31c0290"
       },
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 7min 44s, sys: 13.5 s, total: 7min 58s\n",
-            "Wall time: 8min 27s\n"
+            "CPU times: user 4min 20s, sys: 3.93 s, total: 4min 24s\n",
+            "Wall time: 4min 38s\n"
           ]
         }
       ]
@@ -149,37 +172,27 @@
       "source": [
         "%%time\n",
         "## Convert the osmx.Graph Object to geopandas\n",
-        "nodes, edges = ox.convert.graph_to_gdfs(ox_network, nodes=True, edges=True) #node_geometry=True, fill_edge_geometry=True"
+        "nodes, edges = ox.convert.graph_to_gdfs(ox_network, nodes=True, edges=True) #node_geometry=True, fill_edge_geometry=True\n",
+        "edges = edges.reset_index()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vm2kNAMcc3uE",
-        "outputId": "51ab37df-63ed-4c5a-ccbc-dd2bfde5f222"
+        "outputId": "068bb95e-1460-4882-a900-839b82169475"
       },
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1min 42s, sys: 3.44 s, total: 1min 46s\n",
-            "Wall time: 1min 46s\n"
+            "CPU times: user 1min 17s, sys: 1.94 s, total: 1min 19s\n",
+            "Wall time: 1min 20s\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "edges = edges.reset_index()"
-      ],
-      "metadata": {
-        "id": "CwN6nBwXyOpn"
-      },
-      "execution_count": 10,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -198,19 +211,19 @@
       ],
       "metadata": {
         "id": "KcD9g2ndksul",
-        "outputId": "4e253286-4111-4a2d-d8ee-80af1bc68add",
+        "outputId": "0b4f9550-8c9f-4eee-b974-84280b93ba0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1min 54s, sys: 1.32 s, total: 1min 55s\n",
-            "Wall time: 1min 19s\n"
+            "CPU times: user 48.7 s, sys: 406 ms, total: 49.2 s\n",
+            "Wall time: 37.9 s\n"
           ]
         }
       ]
@@ -218,12 +231,12 @@
     {
       "cell_type": "code",
       "source": [
-        "network.save_hdf5('ncr_network.h5')"
+        "network.save_hdf5(f'{city}_network.h5')"
       ],
       "metadata": {
         "id": "-EoDg231astc"
       },
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -239,23 +252,23 @@
       "cell_type": "code",
       "source": [
         "%%time\n",
-        "network = pdna.Network.from_hdf5('ncr_network.h5')"
+        "network = pdna.Network.from_hdf5(f'{city}_network.h5')"
       ],
       "metadata": {
         "id": "GKZFtahMeKCt",
-        "outputId": "34a0a182-e3b3-4e8a-b746-7fbe25f38fa3",
+        "outputId": "1dd05cc1-3351-4fec-e1fd-c552e917ff38",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 2min 2s, sys: 1.2 s, total: 2min 3s\n",
-            "Wall time: 1min 26s\n"
+            "CPU times: user 46 s, sys: 398 ms, total: 46.4 s\n",
+            "Wall time: 35 s\n"
           ]
         }
       ]
