--- a/notebooks/02_download_metro_data.ipynb
+++ b/notebooks/02_download_metro_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwwEAferjBVxFf5GKrqo+S",
+      "authorship_tag": "ABX9TyPuDCPHrh3Cn6au6UdAkyza",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,27 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/kavyajeetbora/modern_geospatial_stack/blob/master/notebooks/02_download_metro_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TODO:\n",
+        "\n",
+        "1. Evaluate the downloaded data from https://themetrorailguy.com/\n",
+        "2. Once evaluated, export it to parquet format"
+      ],
+      "metadata": {
+        "id": "HhDFxdOgB2t8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Install Dependencies and Import Modules"
+      ],
+      "metadata": {
+        "id": "sEOxI_qEByLK"
+      }
     },
     {
       "cell_type": "code",
@@ -182,12 +203,12 @@
         "metro_line_df[columns].sample(5)"
       ],
       "metadata": {
-        "id": "KDNZWAjF9s03",
-        "outputId": "0171a223-2808-415f-e4dc-b3b9604da9cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 379
-        }
+        },
+        "id": "KDNZWAjF9s03",
+        "outputId": "0171a223-2808-415f-e4dc-b3b9604da9cd"
       },
       "execution_count": 60,
       "outputs": [
@@ -591,12 +612,12 @@
         "city_df.plot();"
       ],
       "metadata": {
-        "id": "y2zv2dbu-GB9",
-        "outputId": "d3c3ea32-a654-46f8-89cb-428c2f2330ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 448
-        }
+        },
+        "id": "y2zv2dbu-GB9",
+        "outputId": "d3c3ea32-a654-46f8-89cb-428c2f2330ab"
       },
       "execution_count": 61,
       "outputs": [
@@ -628,12 +649,12 @@
         "city_stn_df.plot();"
       ],
       "metadata": {
-        "id": "DHk-UqG8AeEu",
-        "outputId": "56ecc671-01f7-4f1e-b43f-b5e4117407c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 432
-        }
+        },
+        "id": "DHk-UqG8AeEu",
+        "outputId": "56ecc671-01f7-4f1e-b43f-b5e4117407c9"
       },
       "execution_count": 63,
       "outputs": [
